--- a/index.html
+++ b/index.html
@@ -14,22 +14,20 @@
                     <label class="label">TRADITION AND LOVE</label>
                     <h2 class="title">HOW IT'S MADE?</h2>
                     <div class="foot_desc">
-                            <img src="/images/about_cow_with_milk.png" alt="Корова з молоком">
+                                <img src="/images/About_img1_mob1x.png" alt="Корова з молоком">
                                 <p class="desc1">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros.
                                 Maecenas eleifend erat at justo fringilla.</p>
-                            <img src="/images/about_milk.png" alt="Бризги молока" class="img_milk">
-                                <p class="desc2">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.
-                                Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
-                                Aliquam erat volutpat. Aenean accumsan<span id="dots">.</span>
-                                <span id="more">. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <div  class="desc2"> <img src="/images/about_img2_mob1x.png" alt="бризги молкоа" class="img_milk"> Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat.
+                                    Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
+                                    Aliquam erat volutpat. Aenean accumsan <span id="dots">.</span> </div>
+                                <div class="desc2"> <span id="more">. Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Id sit esse minima voluptates. Eligendi, veniam quis veritatis harum incidunt similique quibusdam quam tempora illo, iste dolor deleniti. 
                                 Debitis quam eveniet minus magni perspiciatis praesentium, vero sequi quis eaque fuga ducimus.
-                                </span></p>
+                                </div></span>
                                 <button onclick="myFunction()" id="myBtn" class="descbtn"> 
-                                <p class="about_pointer"> Read More <svg width="8" height="7" class="icon">
+                                <p  class="about_pointer"> Read More </p> <svg width="8" height="7" class="icon">
                                 <use href="./images/icons.svg#pointer"></use>
-                                </svg> </p></button>
-                            </в>
+                                </svg></button>
                 </div>    
     </section>
 </body>
